buildpacks/nodejs/src/npm_engine/snapshots/errors___npm_engine_inventory_parse_error.snap
---
source: buildpacks/nodejs-npm-engine/src/errors.rs
---
- Debug Info:
  - TOML parse error at line 1, column 12
      |
    1 | [[artifacts
      |            ^
    invalid table header
    expected `.`, `]]`

! Failed to load available `npm` versions
!
! An unexpected error occurred while loading the available `npm` versions.
!
! If the issue persists and you think you found a bug in the buildpack, reproduce the issue locally with a minimal example. Open an issue in the buildpack's GitHub repository and include the details here:
! https://github.com/heroku/buildpacks-nodejs/issues
